# agentlint

./: .gitignore  .rustqual-baseline.json  CLAUDE.md  Cargo.toml  README.md  agentlint.example.toml  deny.toml  rustqual.toml
.ctx/: HANDOFF.agentlint.agentlint.state.yaml  HANDOFF.agentlint.agentlint.yaml
.github/: actionlint.yaml
.github/workflows/: merge.yml  nightly.yml  pr.yml  release.yml
crates/agentlint-claude/: Cargo.toml
crates/agentlint-claude/src/: agents.rs  commands.rs  frontmatter.rs  hooks.rs  lib.rs  macros.rs  mcp.rs  meta.rs  settings.rs  skills.rs
crates/agentlint-claude/tests/fixtures/agents/: missing_description.md  missing_name.md  no_frontmatter.md  valid.md
crates/agentlint-claude/tests/fixtures/commands/: valid.md
crates/agentlint-claude/tests/fixtures/settings/: unknown_key.json  valid.json
crates/agentlint-claude/tests/fixtures/skills/: valid.md
crates/agentlint-codex/: Cargo.toml
crates/agentlint-codex/src/: lib.rs
crates/agentlint-codex/tests/fixtures/: valid.md
crates/agentlint-core/: Cargo.toml
crates/agentlint-core/src/: config.rs  lib.rs  testing.rs
crates/agentlint-cursor/: Cargo.toml
crates/agentlint-cursor/src/: lib.rs
crates/agentlint-cursor/tests/fixtures/: unclosed_fence.mdc  valid_no_frontmatter.mdc  valid_with_frontmatter.mdc
crates/agentlint-docs/: Cargo.toml
crates/agentlint-docs/src/: lib.rs
crates/agentlint-frontmatter/: Cargo.toml
crates/agentlint-frontmatter/src/: builder.rs  lib.rs
crates/agentlint-gemini/: Cargo.toml
crates/agentlint-gemini/src/: lib.rs
crates/agentlint-gemini/tests/fixtures/: valid.md
crates/agentlint-opencode/: Cargo.toml
crates/agentlint-opencode/src/: lib.rs
crates/agentlint-opencode/tests/fixtures/: invalid.json  valid.json  valid_agents.md
crates/agentlint-pi/: Cargo.toml
crates/agentlint-pi/src/: lib.rs
crates/agentlint-pi/tests/fixtures/: valid_agents.md  valid_system.md
docs/: ROADMAP.agentlint.md  roadmap.agentlint.md
docs/plans/: 2026-05-15-agentlint.md  2026-05-15-opencode-schema-validation.md  2026-05-15-wave1-stub-validators.md  2026-05-16-agentlint-docs.md  2026-05-16-agentlint-toml-config.md  2026-05-16-difficulty-tiers.md
hooks/: pre-push
scripts/: dev-setup.sh
src/: main.rs
xtask/: Cargo.toml
xtask/src/: bump.rs  ci_watch.rs  commit_ranger.rs  detect_changes.rs  gates.rs  land.rs  main.rs  publish.rs  release.rs  rustqual.rs  utils.rs
