[workspace]
members = [
    "crates/agentlint-core",
    "crates/agentlint-frontmatter",
    "crates/agentlint-claude",
    "crates/agentlint-cursor",
    "crates/agentlint-codex",
    "crates/agentlint-opencode",
    "crates/agentlint-gemini",
    "crates/agentlint-pi",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Joseph O'Brien"]
repository = "https://github.com/89jobrien/agentlint"
publish = true

[package]
name = "agentlint"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Linter for AI coding agent harness files (Claude Code, Cursor, Codex, Gemini, OpenCode, Pi)"

[[bin]]
name = "agentlint"
path = "src/main.rs"

[dependencies]
agentlint-core     = { path = "crates/agentlint-core",     version = "0.1.0", features = ["config"] }
agentlint-claude   = { path = "crates/agentlint-claude",   version = "0.1.0" }
agentlint-cursor   = { path = "crates/agentlint-cursor",   version = "0.1.0" }
agentlint-codex    = { path = "crates/agentlint-codex",    version = "0.1.0" }
agentlint-opencode = { path = "crates/agentlint-opencode", version = "0.1.0" }
agentlint-gemini   = { path = "crates/agentlint-gemini",   version = "0.1.0" }
agentlint-pi       = { path = "crates/agentlint-pi",       version = "0.1.0" }
clap               = { version = "4", features = ["derive"] }
