[workspace]
members = [
    "crates/agentlint-core",
    "crates/agentlint-frontmatter",
    "crates/agentlint-claude",
    "crates/agentlint-cursor",
    "crates/agentlint-codex",
    "crates/agentlint-opencode",
    "crates/agentlint-gemini",
    "crates/agentlint-pi",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["Joseph O'Brien"]
repository = "https://github.com/89jobrien/agentlint"
publish = true

[workspace.dependencies]
# Internal crates
agentlint-core        = { path = "crates/agentlint-core",        version = "0.4.0" }
agentlint-frontmatter = { path = "crates/agentlint-frontmatter", version = "0.4.0" }
agentlint-claude      = { path = "crates/agentlint-claude",      version = "0.4.0" }
agentlint-cursor      = { path = "crates/agentlint-cursor",      version = "0.4.0" }
agentlint-codex       = { path = "crates/agentlint-codex",       version = "0.4.0" }
agentlint-opencode    = { path = "crates/agentlint-opencode",    version = "0.4.0" }
agentlint-gemini      = { path = "crates/agentlint-gemini",      version = "0.4.0" }
agentlint-pi          = { path = "crates/agentlint-pi",          version = "0.4.0" }
# External shared deps
clap       = { version = "4",   features = ["derive"] }
nom        = "7"
proptest   = "1"
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
tempfile   = "3"
toml       = "0.8"
walkdir    = "2"

[package]
name = "agentlint"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Linter for AI coding agent harness files (Claude Code, Cursor, Codex, Gemini, OpenCode, Pi)"

[[bin]]
name = "agentlint"
path = "src/main.rs"

[dependencies]
agentlint-core     = { workspace = true, features = ["config"] }
agentlint-claude   = { workspace = true }
agentlint-cursor   = { workspace = true }
agentlint-codex    = { workspace = true }
agentlint-opencode = { workspace = true }
agentlint-gemini   = { workspace = true }
agentlint-pi       = { workspace = true }
clap               = { workspace = true }
