[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow  = "1"
chrono  = { version = "0.4", features = ["serde"] }
serde      = { workspace = true }
serde_json = { workspace = true }
xshell  = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
