[package]
name = "agentlint-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Claude Code agent harness files (agents, skills, commands, hooks, settings)"

[dependencies]
agentlint-core        = { path = "../agentlint-core",        version = "0.2.0" }
agentlint-frontmatter = { path = "../agentlint-frontmatter", version = "0.2.0" }
serde_json            = "1"

[dev-dependencies]
agentlint-core = { path = "../agentlint-core", version = "0.2.0", features = ["test-utils"] }
tempfile       = "3"
