[package]
name = "agentlint-claude"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Claude Code agent harness files (agents, skills, commands, hooks, settings)"

[dependencies]
agentlint-core        = { workspace = true }
agentlint-frontmatter = { workspace = true }
serde_json            = "1"

[dev-dependencies]
agentlint-core = { workspace = true, features = ["test-utils"] }
tempfile       = "3"
