[package]
name = "agentlint-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Claude Code agent harness files (agents, skills, commands, hooks, settings)"

[dependencies]
agentlint-core        = { workspace = true }
agentlint-frontmatter = { workspace = true }
serde_json            = { workspace = true }

[dev-dependencies]
agentlint-core = { workspace = true, features = ["test-utils"] }
tempfile       = { workspace = true }
