[package]
name = "agentlint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Core primitives for agentlint: Diagnostic, Validator trait, file runner, and output formatters"

[features]
test-utils = ["dep:tempfile"]
config     = ["dep:toml", "dep:serde"]

[dependencies]
serde_json = "1"
walkdir    = "2"
tempfile   = { version = "3", optional = true }
toml       = { version = "0.8", optional = true }
serde      = { version = "1",   features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
