[package]
name = "agentlint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Core primitives for agentlint: Diagnostic, Validator trait, file runner, and output formatters"

[features]
test-utils = ["dep:tempfile"]
config     = ["dep:toml", "dep:serde"]

[dependencies]
serde_json = { workspace = true }
walkdir    = { workspace = true }
tempfile   = { workspace = true, optional = true }
toml       = { workspace = true, optional = true }
serde      = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
