[package]
name = "agentlint-cursor"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Cursor rule files (.mdc, .md, .cursorrules)"

[dependencies]
agentlint-core        = { workspace = true }
agentlint-frontmatter = { workspace = true }

[dev-dependencies]
agentlint-core = { workspace = true, features = ["test-utils"] }
