[package]
name = "agentlint-frontmatter"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "YAML frontmatter parser for agentlint — shared by Claude Code and Cursor validators"

[dependencies]
agentlint-core = { workspace = true }
nom             = "7"

[dev-dependencies]
proptest       = "1"
