[package]
name = "agentlint-frontmatter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "YAML frontmatter parser for agentlint — shared by Claude Code and Cursor validators"

[dependencies]
agentlint-core = { workspace = true }
nom             = { workspace = true }

[dev-dependencies]
proptest       = { workspace = true }
