[package]
name = "agentlint-gemini"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Google Gemini GEMINI.md files"

[dependencies]
agentlint-core = { path = "../agentlint-core", version = "0.1.0" }
