[package]
name = "agentlint-gemini"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Google Gemini GEMINI.md files"

[dependencies]
agentlint-core = { workspace = true }
