[package]
name = "agentlint-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for OpenCode AGENTS.md and opencode.json files"

[dependencies]
agentlint-core = { path = "../agentlint-core", version = "0.2.0" }
serde_json     = "1"
