[package]
name = "agentlint-pi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Pi AGENTS.md and SYSTEM.md files"

[dependencies]
agentlint-core = { path = "../agentlint-core", version = "0.1.0" }
