[package]
name = "agentlint-pi"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "agentlint validator for Pi AGENTS.md and SYSTEM.md files"

[dependencies]
agentlint-core = { workspace = true }
